Fix mobile: previews hidden by default, only show on tap (matches desktop)

--- a/style.css
+++ b/style.css
@@ -555,35 +555,11 @@ p, div {
     font-size: 15px;
     margin: 0 0 10px 0;
   }
-  .hover-image {
-    position: static !important;
-    display: block !important;
-    width: 100vw !important;
-    max-width: 100vw !important;
-    left: 0 !important;
-    top: 0 !important;
-    margin-bottom: 0.5em;
-    border: 1px solid #ccc;
-    z-index: 10;
-  }
   .recently-been-img-wrap, .recently-found-hover, .studio-hover, .interface-hover, .direction-hover, .scale-hover, .recently-visited-hover {
     display: block;
     position: static;
     width: 100%;
     margin-bottom: 1.2em;
-  }
-  .recently-been-caption, .scale-caption, .direction-caption, .experiments-caption, .studio-caption {
-    position: static !important;
-    width: 100vw !important;
-    max-width: 100vw !important;
-    margin-top: 0.3em;
-    margin-bottom: 1em;
-    display: block !important;
-    left: 0 !important;
-    top: unset !important;
-    font-size: 13px;
-    padding: 0.4em 0.7em;
-    box-sizing: border-box;
   }
   .interface-grid {
     grid-template-columns: 1fr !important;
